<resources>
    <string name="app_name">Calculator</string>
    <string name="equally">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="delete">AC</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nice">9</string>
    <string name="multiply">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="C">C</string>
    <string name="F">F</string>
    <string name="bin">BIN</string>
    <string name="oct">OCT</string>
    <string name="dec">DEC</string>
    <string name="hex">HEX</string>
</resources>
